<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_plus_delay_1s"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:background="@drawable/shape_background"
            android:gravity="center"
            android:text="@string/plus_delay_1s"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_value_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/value"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_plus_delay_1s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_plus_delay_1s"
            app:layout_constraintTop_toTopOf="@id/tv_plus_delay_1s" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_minus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cl_plus"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_minus_delay_1s"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:background="@drawable/shape_background"
            android:gravity="center"
            android:text="@string/minus_delay_1s"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_value_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/value"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_minus_delay_1s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_minus_delay_1s"
            app:layout_constraintTop_toTopOf="@id/tv_minus_delay_1s" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cl_minus"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_multiply_delay_5s"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:background="@drawable/shape_background"
            android:gravity="center"
            android:text="@string/multiply_delay_5s"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_value_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/value"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_multiply_delay_5s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_multiply_delay_5s"
            app:layout_constraintTop_toTopOf="@id/tv_multiply_delay_5s" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cl_multiply"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_random_delay_3s"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:background="@drawable/shape_background"
            android:gravity="center"
            android:text="@string/random_delay_3s"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_value_random"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/value"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_random_delay_3s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_random_delay_3s"
            app:layout_constraintTop_toTopOf="@id/tv_random_delay_3s" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_stop_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/use_addition"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_random"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_stop_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/use_minus"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_random"
        app:layout_constraintStart_toStartOf="@id/bt_stop_random"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_stop_kernel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/use_kernel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_stop_addition"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_stop_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/use_random"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_stop_minus"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>